# sed_fit

./: .gitignore  README.md  binary_sed_fit.py  environment.yaml  fitting-a-sed-new.ipynb  pyproject.toml  requirements.txt
config/: fitting-a-sed-targets.json
sed_fit/: sed_fit.py  stellar_grids.py
sed_fit/data/stellar_grids/: sed-filter-mappings.json
support/: extinction.py  pipeline.py  plots.py  sed.py
tests/: test_stellar_grids.py
tests/data/stellar_grids/: bt-settl-aggs-test-flat-file.npz  bt-settl-agss-test.npz
